# ghdownload

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
frontend/: app.js  index.html
ghdownload/: __init__.py  cli.py  github_api.py
